# Min

./: .gitignore  LICENSE  README.md
MinBackend/: main.py  pyproject.toml  schemas.py
SoftArduino/MinBackend/: main.py
SoftArduino/frontend/: package-lock.json  package.json
SoftArduino/frontend/src/: App.vue
SoftArduino/frontend/src/components/: LiFiTransmitter.vue
SoftEsp32/Client/: main.py  pyproject.toml
SoftEsp32/forDeploy/: docker-compose.yml
SoftEsp32/forDeploy/front/LookData/: README.md  dockerfile.frontend  nginx.conf  package-lock.json  package.json  test-api.html
SoftEsp32/forDeploy/front/LookData/src/: App.vue
SoftEsp32/forDeploy/front/LookData/src/assets/: main.css
SoftEsp32/forDeploy/front/LookData/src/components/: MessageCard.vue  MessageList.vue  ServerStatus.vue  ThemeToggle.vue
SoftEsp32/forDeploy/front/LookData/src/composables/: useTheme.js
SoftEsp32/forDeploy/front/LookData/src/services/: api.js
SoftEsp32/forDeploy/server/: .dockerignore  Dockerfile.backend  pyproject.toml  requirements.txt
SoftEsp32/forDeploy/server/alembic/: env.py
SoftEsp32/forDeploy/server/alembic/versions/: 7536fb4376ee_initial_migration_with_message_model.py
SoftEsp32/forDeploy/server/src/: config.py  crud.py  database.py  main.py  models.py  routers.py  schemas.py
frontend/: package-lock.json
frontend/src/: App.vue
frontend/src/components/: LiFiTransmitter.vue
gui/: config.py  main.py  receiver_mode.py  requirements.txt  serial_handler.py  transmitter_mode.py
sketch_arduino/: sketch_arduino.ino
sketch_esp32/: sketch_esp32.ino
